--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -1,4 +1,4 @@
-script(type="text/javascript" src="/scripts/libs/jquery/dist/jquery.js")
+script(type="text/javascript" src="/scripts/libs/jquery/dist/jquery.min.js")
 script(type="text/javascript" src="/scripts/libs/angular/angular.min.js")
 script(type="text/javascript" src="/scripts/libs/angular-resource/angular-resource.js")
 script(type="text/javascript" src="/scripts/libs/angular-route/angular-route.js")
