UI features added.

--- a/public/scripts/libs/bootstrap/less/alerts.less
+++ b/public/scripts/libs/bootstrap/less/alerts.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 
-// Base styles
+// Base style
 // -------------------------
 
 .alert {
@@ -52,7 +52,7 @@
   }
 }
 
-// Alternate styles
+// Alternate style
 //
 // Generate contextual modifier classes for colorizing the alert.
 
