--- a/public/scripts/libs/bootstrap/less/code.less
+++ b/public/scripts/libs/bootstrap/less/code.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 
-// Inline and block code styles
+// Inline and block code style
 code,
 kbd,
 pre,
