--- a/public/scripts/libs/bootstrap/less/variables.less
+++ b/public/scripts/libs/bootstrap/less/variables.less
@@ -23,7 +23,7 @@
 
 //== Scaffolding
 //
-//## Settings for some of the most global styles.
+//## Settings for some of the most global style.
 
 //** Background color for `<body>`.
 @body-bg:               #fff;
@@ -418,7 +418,7 @@
 //
 //##
 
-//=== Shared nav styles
+//=== Shared nav style
 @nav-link-padding:                          10px 15px;
 @nav-link-hover-bg:                         @gray-lighter;
 
