--- a/server/views/includes/layout.jade
+++ b/server/views/includes/layout.jade
@@ -2,16 +2,11 @@ doctype
 html
     head
         title
-            | jade
+            | MEANbeta
         link(rel="stylesheet" href="scripts/libs/bootstrap/dist/css/bootstrap.css")
         link(rel="stylesheet" href="scripts/libs/toastr/toastr.css")
         link(rel="stylesheet" href="style/app.css")
     body(data-ng-app="app")
-        h1
-            | Hi from layout!
-        h2
-            | World
-
         block main
 
         include scripts
