--- a/public/scripts/libs/bootstrap/less/buttons.less
+++ b/public/scripts/libs/bootstrap/less/buttons.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 
-// Base styles
+// Base style
 // --------------------------------------------------
 
 .btn {
