--- a/public/scripts/libs/bootstrap/less/forms.less
+++ b/public/scripts/libs/bootstrap/less/forms.less
@@ -39,7 +39,7 @@ label {
 
 // Normalize form controls
 //
-// While most of our form styles require extra classes, some basic normalization
+// While most of our form style require extra classes, some basic normalization
 // is required to ensure optimum display with or without those classes to better
 // address browser inconsistencies.
 
@@ -126,7 +126,7 @@ output {
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 
-  // Customize the `:focus` state to imitate native WebKit styles.
+  // Customize the `:focus` state to imitate native WebKit style.
   .form-control-focus();
 
   // Placeholder
@@ -168,7 +168,7 @@ input[type="search"] {
 }
 
 
-// Special styles for iOS temporal inputs
+// Special style for iOS temporal inputs
 //
 // In Mobile Safari, setting `display: block` on temporal inputs causes the
 // text within the input to become vertically misaligned. As a workaround, we
@@ -545,7 +545,7 @@ input[type="checkbox"] {
 
   // Consistent vertical alignment of radios and checkboxes
   //
-  // Labels also get some reset styles, but that is scoped to a media query below.
+  // Labels also get some reset style, but that is scoped to a media query below.
   .radio,
   .checkbox,
   .radio-inline,
@@ -586,7 +586,7 @@ input[type="checkbox"] {
 
   // Form group sizes
   //
-  // Quick utility class for applying `.input-lg` and `.input-sm` styles to the
+  // Quick utility class for applying `.input-lg` and `.input-sm` style to the
   // inputs and labels within a `.form-group`.
   .form-group-lg {
     @media (min-width: @screen-sm-min) {
