--- a/public/scripts/libs/bootstrap/less/grid.less
+++ b/public/scripts/libs/bootstrap/less/grid.less
@@ -43,7 +43,7 @@
 
 // Columns
 //
-// Common styles for small and large grid columns
+// Common style for small and large grid columns
 
 .make-grid-columns();
 
