--- a/public/scripts/libs/bootstrap/less/navbar.less
+++ b/public/scripts/libs/bootstrap/less/navbar.less
@@ -202,7 +202,7 @@
   border-radius: @border-radius-base;
 
   // We remove the `outline` here, but later compensate by attaching `:hover`
-  // styles to `:focus`.
+  // style to `:focus`.
   &:focus {
     outline: 0;
   }
