--- a/public/scripts/libs/bootstrap/less/print.less
+++ b/public/scripts/libs/bootstrap/less/print.less
@@ -1,7 +1,7 @@
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 
 // ==========================================================================
-// Print styles.
+// Print style.
 // Inlined to avoid the additional HTTP request: h5bp.com/r
 // ==========================================================================
 
