--- a/public/scripts/libs/bootstrap/less/tables.less
+++ b/public/scripts/libs/bootstrap/less/tables.less
@@ -17,7 +17,7 @@ th {
 }
 
 
-// Baseline styles
+// Baseline style
 
 .table {
   width: 100%;
@@ -108,7 +108,7 @@ th {
 
 // Zebra-striping
 //
-// Default zebra-stripe styles (alternating gray and transparent backgrounds)
+// Default zebra-stripe style (alternating gray and transparent backgrounds)
 
 .table-striped {
   > tbody > tr:nth-of-type(odd) {
