Some refactoring and login view added.

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -11,6 +11,7 @@ block main
                     li
                         a(href="#/")
                             | Home
+                div(data-ng-include="'partials/account/login'")
     section
         div(data-ng-view)
 
