--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -3,3 +3,4 @@ script(type="text/javascript" src="/scripts/libs/angular/angular.min.js")
 script(type="text/javascript" src="/scripts/libs/angular-resource/angular-resource.js")
 script(type="text/javascript" src="/scripts/libs/angular-route/angular-route.js")
 script(type="text/javascript" src="/scripts/app.js")
+script(type="text/javascript" src="/scripts/ctrls/MainCtrl.js")
