Login server logic added.

--- a/server/views/partials/account/login.jade
+++ b/server/views/partials/account/login.jade
@@ -1,4 +1,4 @@
-div.navbar-right
+div.navbar-right(data-ng-controller="LoginCtrl")
     form.navbar-form
         .form-group
             input.form-control(type="text", placeholder="Username" data-ng-model="user.username")
