--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -4,3 +4,4 @@ script(type="text/javascript" src="/scripts/libs/angular-resource/angular-resour
 script(type="text/javascript" src="/scripts/libs/angular-route/angular-route.js")
 script(type="text/javascript" src="/scripts/app.js")
 script(type="text/javascript" src="/scripts/ctrls/MainCtrl.js")
+script(type="text/javascript" src="/scripts/ctrls/LoginCtrl.js")
