Login and logout on server and client

--- a/server/views/includes/layout.jade
+++ b/server/views/includes/layout.jade
@@ -10,3 +10,7 @@ html
         block main
 
         include scripts
+
+        if !!currentUser
+            script.
+                window.bootstrapedUserObject = !{JSON.stringify(currentUser)}
