--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -1,7 +1,12 @@
 script(type="text/javascript" src="/scripts/libs/jquery/dist/jquery.min.js")
+script(type="text/javascript" src="/scripts/libs/bootstrap/dist/js/bootstrap.js")
 script(type="text/javascript" src="/scripts/libs/angular/angular.min.js")
+script(type="text/javascript" src="/scripts/libs/toastr/toastr.js")
 script(type="text/javascript" src="/scripts/libs/angular-resource/angular-resource.js")
 script(type="text/javascript" src="/scripts/libs/angular-route/angular-route.js")
 script(type="text/javascript" src="/scripts/app.js")
 script(type="text/javascript" src="/scripts/ctrls/MainCtrl.js")
 script(type="text/javascript" src="/scripts/ctrls/LoginCtrl.js")
+script(type="text/javascript" src="/scripts/services/notifier.js")
+script(type="text/javascript" src="/scripts/services/identity.js")
+script(type="text/javascript" src="/scripts/services/authentication.js")
