Added filter, search, create, edit functionality

--- a/server/views/includes/layout.jade
+++ b/server/views/includes/layout.jade
@@ -3,6 +3,7 @@ html
     head
         title
             | MEANbeta
+        base(href="/")
         link(rel="stylesheet" href="scripts/libs/bootstrap/dist/css/bootstrap.css")
         link(rel="stylesheet" href="scripts/libs/toastr/toastr.css")
         link(rel="stylesheet" href="style/app.css")
