--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -11,6 +11,9 @@ block main
                     li
                         a(href="#/")
                             | Home
+                    li
+                        a(href="#/courses")
+                            | Courses
                 div(data-ng-include="'partials/account/login'")
     section
         div(data-ng-view)
