--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -7,6 +7,13 @@ script(type="text/javascript" src="/scripts/libs/angular-route/angular-route.js"
 script(type="text/javascript" src="/scripts/app.js")
 script(type="text/javascript" src="/scripts/ctrls/MainCtrl.js")
 script(type="text/javascript" src="/scripts/ctrls/LoginCtrl.js")
+script(type="text/javascript" src="/scripts/ctrls/ProfileCtrl.js")
+script(type="text/javascript" src="/scripts/ctrls/UserListCtrl.js")
+script(type="text/javascript" src="/scripts/ctrls/SignUpCtrl.js")
+script(type="text/javascript" src="/scripts/ctrls/CoursesCtrl.js")
 script(type="text/javascript" src="/scripts/services/notifier.js")
 script(type="text/javascript" src="/scripts/services/identity.js")
 script(type="text/javascript" src="/scripts/services/authentication.js")
+script(type="text/javascript" src="/scripts/services/UsersResource.js")
+script(type="text/javascript" src="/scripts/services/CoursesResource.js")
+script(type="text/javascript" src="/scripts/cache/cachedCourses.js")
