--- a/server/views/partials/main/featured-courses.jade
+++ b/server/views/partials/main/featured-courses.jade
@@ -1,2 +1,2 @@
 div(data-ng-repeat="course in courses | filter: { featured: true }")
-    | {{ course.name }}
+    a(href="#/courses/{{ course._id }}") {{ course.name }}
